Propagate error codes in FIONREAD. Fixes bug #3973.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30896 a95241bf-73f2-0310-859d-f6bbb57e9c96